# NRTWsim-platform-generator

./: .gitignore  CMakeLists.txt  README.md  json_platform_loader.cpp  json_platform_loader_new.cpp  platform_cluster_multiple.json  platform_config.json  platform_summary.cpp
.github/workflows/: build.yml
tests/: compare_cluster25.cpp  platform_cluster25.cpp  platform_cluster25_multiple.cpp  platform_cluster_multiple.json
